# DSL3-Haskell

./: CHANGELOG.md  DSL-Haskell.cabal  DSL-Haskell.cabal.local  README.md
app/: Main.hs
src/: Algebra.hs  Coprimes.hs  Moduli.hs  Primes.hs
