cabal-version:      2.4
name:               DSL-Haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Pleket
maintainer:         50240262+Pleket@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  build-depends:
    base ^>= 4.14.3.0
  ghc-options:
    -Wall

library
  import:              shared-properties
  hs-source-dirs:      src
  exposed-modules:     Algebra
  build-depends:       containers

executable DSL-Haskell
    import:           shared-properties
    main-is:          Main.hs
    build-depends:    DSL-Haskell
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app
