cabal-version:      2.4
name:               DSL-Haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Pleket
maintainer:         50240262+Pleket@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  build-depends:
    base ^>= 4.14.3.0
  ghc-options:
    -Wall

library
  import:             shared-properties
  hs-source-dirs:     src
  exposed-modules:    Algebra,
                      Primes,
                      Moduli
  build-depends:      containers, 
                      arithmoi,
                      array (>=0.5 && <0.6),
                      base (>=4.10 && <5),
                      chimera (>=0.3),
                      constraints,
                      containers (>=0.5.8 && <0.7),
                      deepseq,
                      exact-pi (>=0.5),
                      integer-gmp (<1.2),
                      integer-logarithms (>=1.0),
                      integer-roots (>=1.0),
                      mod,
                      random (>=1.0 && <1.3),
                      semirings (>=0.5.2),
                      transformers (>=0.4 && <0.7),
                      vector (>=0.12),

executable DSL-Haskell
    import:           shared-properties
    main-is:          Main.hs
    build-depends:    DSL-Haskell
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app
